@@ -7,7 +7,7 @@ namespace LHAPDF {
   /// Extrapolates using the closest point on the Grid.
   class ErrExtrapolator : public Extrapolator {
 
-    /// \param Grid the PDFGrid to extrapolate
+    /// \param Grid the GridPDF to extrapolate
     /// \param ID the MC Parton ID
     /// \param X the momentum fraction
     /// \param Q2 the squared energy scale
