@@ -1,11 +1,11 @@
 #include "LHAPDF/NearestPointExtrapolator.h"
-#include "LHAPDF/PDFGrid.h"
+#include "LHAPDF/GridPDF.h"
 
 namespace LHAPDF {
 
 
   double NearestPointExtrapolator::extrapolateXQ2(int id, double x, double q2) const {
-    /// @todo Functionality needs to be re-added to PDFGrid... or implemented here.
+    /// @todo Functionality needs to be re-added to GridPDF... or implemented here.
     // pair<size_t, size_t> idx = pdf()->lookupClosest(x, q2);
     // xidx = idx.first;
     // q2idx = idx.second;
