@@ -1,11 +1,11 @@
-#include "LHAPDF/PDFGrid.h"
+#include "LHAPDF/GridPDF.h"
 #include "LHAPDF/BicubicInterpolator.h"
 #include <iostream>
 #include <stdlib.h>
 #include <time.h>
 
 int main( int argc, char** argv ) {
-  PDFGrid* grid = PDFGrid::load("test.LHm");
+  GridPDF* grid = GridPDF::load("test.LHm");
   BicubicInterpolator bic;
   grid->setInterpolator( &bic );
 
